# rotmg-rs

./: .editorconfig  Cargo.toml
.github/workflows/: rust-audit.yml  rust-checks.yml
rotmg_extractor/: Cargo.toml
rotmg_extractor/src/: extractor.rs  lib.rs
rotmg_extractor/src/avm2/: abcfile.rs  class.rs  constants.rs  macros.rs  metadata.rs  methods.rs  mod.rs  primitives.rs  traits.rs
rotmg_networking/: Cargo.toml
rotmg_networking/src/: codec.rs  lib.rs  policy.rs  rc4.rs  unrestricted_policy_file.xml
rotmg_networking/tests/: test_basic_connections.rs
rotmg_packets/: Cargo.toml
rotmg_packets/src/: lib.rs  mappings.rs  parameters.rs  raw.rs
rotmg_packets/src/adapters/: byteslice.rs  mod.rs  option.rs  primitives.rs  str.rs  string.rs  unit.rs  vec.rs
rotmg_packets/src/structured/: data.rs  macros.rs  mod.rs  packets.rs
rotmg_proxy/: Cargo.toml
rotmg_proxy/src/: data.rs  main.rs  proxy.rs  servers.rs
