[workspace]
members = [
	"rotmg_packets",
	"rotmg_extractor",
	"rotmg_networking",
	"rotmg_proxy",
]

# don't include debug symbols for dependencies, even in debug mode
# this substantially reduces debug mode binary sizes
[profile.dev.package."*"]
debug = false

# enable extra optimizations for release mode
[profile.release]
lto = true
codegen-units = 1
