[package]
name = "rotmg_extractor"
version = "0.1.0"
authors = ["Dana Marcuse <dana@marcuse.us>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
thiserror = "1.0.19"
swf-parser = "0.11.0"
rotmg_packets = { path = "../rotmg_packets" }
bimap = { version = "0.4.0", features = [ "serde" ] }

[dev-dependencies]
reqwest = { version = "0.10.6", features = [ "blocking" ] }
