[package]
name = "rotmg_networking"
version = "0.1.0"
authors = ["Dana Marcuse <dana@marcuse.us>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
rotmg_packets = { path = "../rotmg_packets" }
tokio = { version = "0.2.21", features = [ "tcp", "time", "io-util" ] }
tokio-util = { version = "0.3.1", features = [ "codec" ] }
log = "0.4.8"
thiserror = "1.0.18"
bytes = "0.5.4"
futures = "0.3.5"

[dev-dependencies]
tokio = { version = "0.2.21", features = [ "macros", "rt-threaded" ] }
